Deep rewrite of XML/JSON, Logging, I18N, and Windows topics (batch 9)
by-topic/api/xml-json/index.md (609 → 916 lines):
- JAXP: SAX vs DOM vs StAX comparison, decision tree
- XPath: compiled expressions, namespace-aware queries
- XML Security: XXE attacks, OWASP hardening for all parsers
- JSON evolution: JEP 198, Jackson/Gson ecosystem, JEP 489
- Joe Wang's JAXP: Catalog API, DTD security properties

by-topic/api/logging/index.md (487 → 816 lines):
- JUL: Handler/Formatter architecture, custom JsonFormatter
- System.Logger (JEP 264): LoggerFinder SPI routing
- -Xlog (JEP 158): syntax, tags, legacy GC flag migration
- Bridge: JUL→SLF4J→Logback setup, circular warning
- Virtual threads: log backpressure, AsyncAppender config
- Log4Shell: attack chain, mitigation, SBOM lessons

by-topic/security/i18n/index.md (454 → 745 lines):
- Unicode: version history, UTF-8 default (JEP 400)
- Locale: BCP 47, Locale.Builder, Category
- CLDR: data types, provider switching
- Text processing: BreakIterator, Normalizer, Collator

by-topic/platform/windows/index.md (493 → 782 lines):
- WinAPI integration: IOCP, VirtualAlloc mappings
- Console UTF-8 (JDK 21+), DLL loading security
- jpackage MSI/EXE, Windows ARM64 (JEP 388)
- Windows Server containers: Dockerfile examples

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>